Fixed header and footer rendering on mobile screens. Added dropdown menu to index.html and favicon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,33 +242,8 @@ textarea {
 }
 
 table {
-  width: 400px;
+  width: 100%;
   /*border-spacing: 40px;*/
-}
-
-th,
-caption {
-  text-align: left;
-}
-
-th,
-td {
-  padding: 10px;
-}
-
-table,
-th,
-td {
-  border: 1px solid rgba(10, 10, 10, 0.5);
-  border-collapse: collapse;
-}
-
-tbody tr:nth-child(odd) {
-  background-color: #fafafa;
-}
-
-tbody tr:nth-child(even) {
-  background-color: rgba(100, 100, 100, 0.25);
 }
 
 input,
@@ -432,7 +407,7 @@ header nav ul li {
   display: inline-block;
   float: left;
   list-style: none;
-  padding: 0 15px;
+  position: relative;
 }
 
 header nav ul li a {
@@ -440,6 +415,35 @@ header nav ul li a {
   font-size: 15px;
   color: #0f0f0f;
   text-transform: uppercase;
+  padding: 40px 15px;
+}
+
+.dropdown {
+  margin-left: 0;
+  display: none;
+  position: absolute;
+  background-color: #000;
+  padding: 10px;
+  border-radius: 0 0 8px 8px;
+}
+
+.dropdown li {
+  width: 180px;
+  border-radius: 4px;
+}
+
+.dropdown li a {
+  line-height: 30px;
+  padding: 8px 15px;
+  text-transform: capitalize;
+}
+
+.dropdown li:hover {
+  background-color: #f3f3f3;
+}
+
+header nav ul li:hover ul {
+  display: block;
 }
 
 header .head-cases {
@@ -468,7 +472,7 @@ header .head-cases {
   header .head-cases {
     display: block;
     font-family: Catamaran;
-    font-size: 16px;
+    font-size: 15px;
     color: #0f0f0f;
     text-transform: uppercase;
     line-height: 36px;
@@ -589,12 +593,29 @@ header .head-cases {
   color: var(--text-color);
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.grid div:nth-child(even) {
+  background-color: red;
+}
+
+.grid div:nth-child(odd) {
+  background-color: green;
+}
+
 .img-test {
-  width: 500px;
-  height: 500px;
+  width: 100%;
   background-image: url("../img/logo.png");
   background-size: cover;
   background-repeat: no-repeat;
+  margin: 0 auto;
+  padding-bottom: 100%; /* Only good upto the size of the image then 
+  requires media query to remove bottom padding */
+  max-height: 500px;
+  max-width: 500px;
 
   /* transition-property: all;
   transition-duration: 2s;
@@ -691,6 +712,42 @@ header .head-cases {
   .index-links div h3 {
     font-size: calc(30px + 0.5vw);
     line-height: 225px;
+  }
+
+  table {
+    width: 400px;
+    /*border-spacing: 40px;*/
+  }
+
+  th,
+  caption {
+    text-align: left;
+  }
+
+  th,
+  td {
+    padding: 10px;
+  }
+
+  table,
+  th,
+  td {
+    border: 1px solid rgba(10, 10, 10, 0.5);
+    border-collapse: collapse;
+  }
+
+  tbody tr:nth-child(odd) {
+    background-color: #fafafa;
+  }
+
+  tbody tr:nth-child(even) {
+    background-color: rgba(100, 100, 100, 0.25);
+  }
+
+  .img-test {
+    width: 500px;
+    height: 500px;
+    padding-bottom: 0;
   }
 
   .transitions {
@@ -896,11 +953,12 @@ main h2 {
 /* FOOTER */
 
 footer {
-  width: calc(920px + 16.66666666666667vw);
+  width: calc(100% - 80px);
   padding: 40px 40px;
   background-color: #050505;
   overflow: hidden;
   z-index: 1000; /* 4th/Top layer */
+  margin-top: 20px;
 }
 
 footer ul {
@@ -939,7 +997,8 @@ footer ul li a {
 }
 
 @media screen and (min-width: 1000px) {
-  .whitespace { /* Should use border-top on footer instead */
+  .whitespace {
+    /* Should use border-top on footer instead */
     height: 20px;
     width: calc(1000px + 16.66666666666667vw);
     background-color: #fafafa;
@@ -947,6 +1006,7 @@ footer ul li a {
     bottom: 280px;
   }
   footer {
+    width: calc(920px + 16.66666666666667vw);
     position: fixed;
     bottom: 0;
   }
